Implement code changes to enhance functionality and improve performance

--- a/scripts/templates/profile_readme.md.jinja2
+++ b/scripts/templates/profile_readme.md.jinja2
@@ -58,6 +58,8 @@ Bienvenido a **Alumnithon**, una iniciativa que busca acercar a los egresados de
 
 ## 🚀 Hackathon Edición {{current_year|default("2025")}}
 
+![Roadmap Alumnithon](../assets/img/ROADMAP_ALUMNITHON.png)
+
 ### 📋 Condiciones
 
 {% if event_details %}
