feat(readme): add avatars for team members in project details section

--- a/scripts/templates/profile_readme.md.jinja2
+++ b/scripts/templates/profile_readme.md.jinja2
@@ -144,7 +144,7 @@ Cada proyecto será revisado por múltiples jueces con criterios técnicos y hum
 
 ##### Full Stack Members
 
-- 🚀 **Jissy Kakin Merlano Zabaleta** [@jissykakin](https://github.com/jissykakin) - _**Project Lead (PL)** - Fullstack + DBA_
+- <img src="https://avatars.githubusercontent.com/u/jissykakin?v=4" width="32" height="32" style="border-radius: 50%"> 🚀 **Jissy Kakin Merlano Zabaleta** [jissykakin](https://github.com/jissykakin) - _**Project Lead (PL)** - Fullstack + DBA_
   - ```bash
     sicaji22@gmail.com
     ```
@@ -155,12 +155,12 @@ Cada proyecto será revisado por múltiples jueces con criterios técnicos y hum
 **Repositorio:** [skilllink-g6b](https://github.com/alumnithon/skilllink-g6b)
 **Miembros asignados:**
 
-- 👨‍💻 **Carlos Eduardo Ferreyra** [@carlosferreyra](https://github.com/carlosferreyra) - _Backend + DevOps_
+- <img src="https://avatars.githubusercontent.com/u/48495214?v=4" width="32" height="32" style="border-radius: 50%"> 👨‍💻 **Carlos Eduardo Ferreyra** [carlosferreyra](https://github.com/carlosferreyra) - _Backend + DevOps_
   - ```bash
     eduferreyraok@gmail.com
     ```
 
-- 👨‍💻 **Emanuel Peracchia** [@emanuelperacchia](https://github.com/emanuelperacchia) - _Backend_
+- <img src="https://avatars.githubusercontent.com/u/emanuelperacchia?v=4" width="32" height="32" style="border-radius: 50%"> 👨‍💻 **Emanuel Peracchia** [emanuelperacchia](https://github.com/emanuelperacchia) - _Backend_
   - ```bash
     emanuelperacchia@gmail.com
     ```
@@ -169,17 +169,17 @@ Cada proyecto será revisado por múltiples jueces con criterios técnicos y hum
 **Repositorio:** [skilllink-g6f](https://github.com/alumnithon/skilllink-g6f)
 **Miembros asignados:**
 
-- 🎨 **Armando Rios** [@armando-rios](https://github.com/armando-rios) - _Frontend-Arq Frontend_
+- <img src="https://avatars.githubusercontent.com/u/armando-rios?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Armando Rios** [armando-rios](https://github.com/armando-rios) - _Frontend-Arq Frontend_
   - ```bash
     armandorios.dev@gmail.com
     ```
 
-- 🎨 **Linamaria Martinez** [@LinamariaMartinez](https://github.com/LinamariaMartinez) - _Frontend + UX/UI_
+- <img src="https://avatars.githubusercontent.com/u/LinamariaMartinez?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Linamaria Martinez** [LinamariaMartinez](https://github.com/LinamariaMartinez) - _Frontend + UX/UI_
   - ```bash
     linamariamartinezp@gmail.com
     ```
 
-- 🎨 **Yatzaré Hernández** [@yatzare-hernandez](https://github.com/yatzare-hernandez) - _Frontend_
+- <img src="https://avatars.githubusercontent.com/u/yatzare-hernandez?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Yatzaré Hernández** [yatzare-hernandez](https://github.com/yatzare-hernandez) - _Frontend_
   - ```bash
     yatzarehernandez@gmail.com
     ```
