fix(readme): update team member avatars in the README

--- a/scripts/templates/profile_readme.md.jinja2
+++ b/scripts/templates/profile_readme.md.jinja2
@@ -144,7 +144,7 @@ Cada proyecto será revisado por múltiples jueces con criterios técnicos y hum
 
 ##### Full Stack Members
 
-- <img src="https://avatars.githubusercontent.com/u/jissykakin?v=4" width="32" height="32" style="border-radius: 50%"> 🚀 **Jissy Kakin Merlano Zabaleta** [jissykakin](https://github.com/jissykakin) - _**Project Lead (PL)** - Fullstack + DBA_
+- <img src="https://avatars.githubusercontent.com/u/94768676?v=4" width="32" height="32" style="border-radius: 50%"> 🚀 **Jissy Kakin Merlano Zabaleta** [jissykakin](https://github.com/jissykakin) - _**Project Lead (PL)** - Fullstack + DBA_
   - ```bash
     sicaji22@gmail.com
     ```
@@ -160,7 +160,7 @@ Cada proyecto será revisado por múltiples jueces con criterios técnicos y hum
     eduferreyraok@gmail.com
     ```
 
-- <img src="https://avatars.githubusercontent.com/u/emanuelperacchia?v=4" width="32" height="32" style="border-radius: 50%"> 👨‍💻 **Emanuel Peracchia** [emanuelperacchia](https://github.com/emanuelperacchia) - _Backend_
+- <img src="https://avatars.githubusercontent.com/u/130922066?v=4" width="32" height="32" style="border-radius: 50%"> 👨‍💻 **Emanuel Peracchia** [emanuelperacchia](https://github.com/emanuelperacchia) - _Backend_
   - ```bash
     emanuelperacchia@gmail.com
     ```
@@ -169,17 +169,17 @@ Cada proyecto será revisado por múltiples jueces con criterios técnicos y hum
 **Repositorio:** [skilllink-g6f](https://github.com/alumnithon/skilllink-g6f)
 **Miembros asignados:**
 
-- <img src="https://avatars.githubusercontent.com/u/armando-rios?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Armando Rios** [armando-rios](https://github.com/armando-rios) - _Frontend-Arq Frontend_
+- <img src="https://avatars.githubusercontent.com/u/180127855?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Armando Rios** [armando-rios](https://github.com/armando-rios) - _Frontend-Arq Frontend_
   - ```bash
     armandorios.dev@gmail.com
     ```
 
-- <img src="https://avatars.githubusercontent.com/u/LinamariaMartinez?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Linamaria Martinez** [LinamariaMartinez](https://github.com/LinamariaMartinez) - _Frontend + UX/UI_
+- <img src="https://avatars.githubusercontent.com/u/130407296?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Linamaria Martinez** [LinamariaMartinez](https://github.com/LinamariaMartinez) - _Frontend + UX/UI_
   - ```bash
     linamariamartinezp@gmail.com
     ```
 
-- <img src="https://avatars.githubusercontent.com/u/yatzare-hernandez?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Yatzaré Hernández** [yatzare-hernandez](https://github.com/yatzare-hernandez) - _Frontend_
+- <img src="https://avatars.githubusercontent.com/u/169735199?v=4" width="32" height="32" style="border-radius: 50%"> 🎨 **Yatzaré Hernández** [yatzare-hernandez](https://github.com/yatzare-hernandez) - _Frontend_
   - ```bash
     yatzarehernandez@gmail.com
     ```
